--- a/src/partials/beats-pill/beats-pill.html
+++ b/src/partials/beats-pill/beats-pill.html
@@ -16,7 +16,7 @@
       </div>
       <div class="beats-pill__price">
         <p class="beats-pill__buy">$299.95</p>
-        <button class="beats-pill__button"><a href="./contacts.html">BUY NOW</a></button>
+        <button class="beats-pill__button"><a href="./contacts.html">buy now</a></button>
       </div>
       <div class="beats-pill__music">
         <p>$60 Apple Music gift card with purchase of select Beats products.*</p>
