--- a/src/partials/beatsx/beatsx.html
+++ b/src/partials/beatsx/beatsx.html
@@ -3,7 +3,7 @@
     <div class="beatsx__product">
       <div>
         <p class="beatsx__title">Talk. Listen. Beats.</p>
-        <h2 class="beatsx__name">Beatsˣ</h2>
+        <p class="beatsx__name">beatsˣ</p>
       </div>
       <div class="beatsx__description">
         <p>
@@ -14,8 +14,8 @@
         </p>
       </div>
       <div class="beatsx__price">
-        <p class="beatsx__buy">$299.95</p>
-        <button class="beatsx__button">BUY NOW</button>
+        <p class="beatsx__buy">$199.95</p>
+        <button class="beatsx__button">buy now</button>
       </div>
       <div class="beatsx__music">
         <p>$60 Apple Music gift card with purchase of select Beats products.*</p>
