--- a/src/partials/filter-page/filter_products.html
+++ b/src/partials/filter-page/filter_products.html
@@ -3,53 +3,62 @@
     <div class="filter__title">
       <p>Earphones</p>
     </div>
-    <div class="filter__price">
-      <p>Price</p>
-    </div>
-    <div class="filter__slider">
-      <input class="filter__slider_price price_min" type="number" id="price_min">
-      <input class="filter__slider_price price_max" type="number" id="price_max">
-    </div>
-    <div class="slider__range"  id="slider-range"></div>
-    <div class="filter__check">
-      <label  class="filter__checkbox">
-        <input type="checkbox">
-        <span>Sale</span>
-      </label>
-      <label class="filter__checkbox" >
-        <input type="checkbox">
-        <span>New</span>
-      </label>
-    </div>
-    <div class="filter__color">
-      <p>Color</p>
-    </div>
-    <div class="filter__change">
-      <div class="color_change change_1"></div>
-      <div class="color_change change_2"></div>
-      <div class="color_change change_3"></div>
-      <div class="color_change change_4"></div>
-      <div class="color_change change_5"></div>
-      <div class="color_change change_6"></div>
-      <div class="color_change change_7"></div>
-      <div class="color_change change_8"></div>
-      <div class="color_change change_9"></div>
-      <div class="color_change change_10"></div>
-    </div>
-    <div class="filter__type">
-      <p>Type</p>
-    </div>
-    <div class="filter__type_select">
-      <label>
-        <select class="type_select">
-          <option class="type_list">Closed-Back</option>
-          <option class="type_list">Open-Back</option>
-          <option class="type_list">On-Ear</option>
-          <option class="type_list">Over-Ear</option>
-          <option class="type_list">In-Ear</option>
-          <option class="type_list">Earbuds</option>
-        </select>
-      </label>
+    <div class="filter__accordeon_wrap">
+      <div class="filter__accordeon_item open">
+        <h2 class="filter_accordeon_title">Filters</h2>
+        <div class="filter__accordeon_content">
+          <div class="filter__menu">
+            <div class="filter__price">
+              <p>Price</p>
+            </div>
+            <div class="filter__slider">
+              <input class="filter__slider_price price_min" type="number" id="price_min">
+              <input class="filter__slider_price price_max" type="number" id="price_max">
+            </div>
+            <div class="slider__range"  id="slider-range"></div>
+            <div class="filter__check">
+              <label  class="filter__checkbox">
+                <input type="checkbox">
+                <span>Sale</span>
+              </label>
+              <label class="filter__checkbox" >
+                <input type="checkbox">
+                <span>New</span>
+              </label>
+            </div>
+            <div class="filter__color">
+              <p>Color</p>
+            </div>
+            <div class="filter__change">
+              <div class="color_change change_1"></div>
+              <div class="color_change change_2"></div>
+              <div class="color_change change_3"></div>
+              <div class="color_change change_4"></div>
+              <div class="color_change change_5"></div>
+              <div class="color_change change_6"></div>
+              <div class="color_change change_7"></div>
+              <div class="color_change change_8"></div>
+              <div class="color_change change_9"></div>
+              <div class="color_change change_10"></div>
+            </div>
+            <div class="filter__type">
+              <p>Type</p>
+            </div>
+            <div class="filter__type_select">
+              <label>
+                <select class="type_select">
+                  <option class="type_list">Closed-Back</option>
+                  <option class="type_list">Open-Back</option>
+                  <option class="type_list">On-Ear</option>
+                  <option class="type_list">Over-Ear</option>
+                  <option class="type_list">In-Ear</option>
+                  <option class="type_list">Earbuds</option>
+                </select>
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
