--- a/src/partials/footer/footer.html
+++ b/src/partials/footer/footer.html
@@ -5,47 +5,47 @@
     </div>
     <div class="footer__menu">
       <ul class="footer__list">
-        <div class="products-list">
+        <li class="footer__list_products">
           <ul>
-            <h2>Products</h2>
-            <li><a href="#">HEADPHONES</a></li>
-            <li><a href="#">EARPHONES</a></li>
-            <li><a href="#">SPEAKERS</a></li>
-            <li><a href="#">ACCESSORIES</a></li>
-            <li><a href="#">COLLABORATIONS</a></li>
-            <li><a href="#">BEATSAUDIO</a></li>
-            <li><a href="#">SPECIAL OFFERS</a></li>
+            <li class="footer__list_title">products</li>
+            <li class="footer__list_link"><a href="#">headphones</a></li>
+            <li class="footer__list_link"><a href="#">earphones</a></li>
+            <li class="footer__list_link"><a href="#">speakers</a></li>
+            <li class="footer__list_link"><a href="#">accessories</a></li>
+            <li class="footer__list_link"><a href="#">collaborations</a></li>
+            <li class="footer__list_link"><a href="#">beatsaudio</a></li>
+            <li class="footer__list_link"><a href="#">special offers</a></li>
           </ul>
-        </div>
-        <div class="support-list">
+        </li>
+        <li class="footer__list_support">
           <ul>
-            <h2>Support</h2>
-            <li><a href="#">PRODUCT HELP</a></li>
-            <li><a href="#">SERVICE & WARRANTY</a></li>
-            <li><a href="#">REGISTER YOUR BEATS</a></li>
-            <li><a href="#">UPDATE YOUR BEATS</a></li>
-            <li><a href="#">AUTHORIZED SERVICE PROVIDERS</a></li>
-            <li><a href="#">CONTACT SUPPORT</a></li>
-            <li><a href="#">INTERNATIONAL NUMBERS</a></li>
+            <li class="footer__list_title">support</li>
+            <li class="footer__list_link"><a href="#">product help</a></li>
+            <li class="footer__list_link"><a href="#">service & warranty</a></li>
+            <li class="footer__list_link"><a href="#">register your beats</a></li>
+            <li class="footer__list_link"><a href="#">update your beats</a></li>
+            <li class="footer__list_link"><a href="#">authorized service providers</a></li>
+            <li class="footer__list_link"><a href="#">contact support</a></li>
+            <li class="footer__list_link"><a href="#">international numbers</a></li>
           </ul>
-        </div>
-        <div class="company-list">
+        </li>
+        <li class="footer__list_company">
           <ul>
-            <h2>Company</h2>
-            <li><a href="#">PRODUCT HELP</a></li>
-            <li><a href="#">NEWS AND EVENTS</a></li>
-            <li><a href="#">PROMOTION TERMS</a></li>
-            <li><a href="#">PRIVACY POLICY</a></li>
-            <li><a href="#">TRADEMARK</a></li>
-            <li><a href="#">TERMS OF USE</a></li>
-            <li><a href="#">COOKIES</a></li>
+            <li class="footer__list_title">company</li>
+            <li class="footer__list_link"><a href="#">product help</a></li>
+            <li class="footer__list_link"><a href="#">news and events</a></li>
+            <li class="footer__list_link"><a href="#">promotion terms</a></li>
+            <li class="footer__list_link"><a href="#">privacy policy</a></li>
+            <li class="footer__list_link"><a href="#">trademark</a></li>
+            <li class="footer__list_link"><a href="#">terms of use</a></li>
+            <li class="footer__list_link"><a href="#">cookies</a></li>
           </ul>
-        </div>
+        </li>
       </ul>
     </div>
     <div class="footer__follow">
       <h2>Follow Us</h2>
-      <div class="footer__social">
+      <div class="footer__follow_social">
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -53,7 +53,7 @@
       </div>
     </div>
   </div>
-  <div class="copyright">
-    Copyright © 2020 Apple Inc. - All rights reserved.
+  <div class="footer__copyright">
+    <p class="footer__copyright_text">Copyright © 2020 Apple Inc. - All rights reserved.</p>
   </div>
 </footer>
