--- a/src/partials/headphones/headphones.html
+++ b/src/partials/headphones/headphones.html
@@ -1,20 +1,20 @@
 <section class="headphones">
   <div class="headphones__container">
     <div class="headphones__product">
-      <div class="hp__img">
+      <div class="headphones__image">
         <img class="headphones__img" src="../../img/bitmap.svg" alt="headphones">
         <img class="m-headphones__img" src="../../img/mobile/m_bitmap_1.svg" alt="m_headphones">
       </div>
-      <div class="headphones__product-buy">
+      <div class="headphones__product_buy">
         <div class="headphones__name">
           <p>Beats Studio3 Wireless</p>
         </div>
         <div class="headphones__description">
-          <p>Experience your music like never before.</p>
+          <p>Experience your<br> music like never before.</p>
         </div>
         <div class="headphones__buy">
           <p class="headphones__price">$299.95</p>
-          <button class="headphones__button">BUY NOW</button>
+          <button class="headphones__button">buy now</button>
         </div>
         <div class="headphones__music">
           <p>$60 Apple Music gift card with purchase of select Beats products.*</p>
