--- a/src/partials/navbar/nav.html
+++ b/src/partials/navbar/nav.html
@@ -1,36 +1,34 @@
-<header>
-  <div class="nav__menu">
-    <div class="nav__burger">
-      <div class="burger-menu">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
-        <ul class="burger-menu__box">
-          <li><a class="menu__item" href="#">HEADPHONES</a></li>
-          <li><a class="menu__item" href="../src/partials/catalog.html">EARPHONES</a></li>
-          <li><a class="menu__item" href="#">SPEAKERS</a></li>
-          <li><a class="menu__item" href="#">EXPLORE</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="nav__logo">
-      <a href="./index.html"><img class="logo_desktop" src="../../img/logo.png" alt="nav_logo"></a>
-    </div>
-    <div class="nav__list">
-      <ul class="nav__list-item">
-        <li><a class="nav__headphones" href="">HEADPHONES</a></li>
-        <li><a class="nav__earphones" href="./about.html">EARPHONES</a></li>
-        <li><a class="nav__speakers" href="">SPEAKERS</a></li>
-        <li><a class="nav__explore" href="">EXPLORE</a></li>
+<div class="nav__menu">
+  <div class="nav__burger">
+    <div class="burger-menu">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+      <ul class="burger-menu__box">
+        <li><a class="menu__item" href="#">HEADPHONES</a></li>
+        <li><a class="menu__item" href="../src/partials/about.html">EARPHONES</a></li>
+        <li><a class="menu__item" href="#">SPEAKERS</a></li>
+        <li><a class="menu__item" href="#">EXPLORE</a></li>
       </ul>
     </div>
-    <div class="nav__icons">
-      <a href=""><img class="search" src="../../img/search.png" alt="search"></a>
-      <a href=""><img class="account" src="../../img/account.png" alt="account"></a>
-      <div class="bucket">
-        <a href=""><img src="../../img/bucket.png" alt="bucket"></a>
-        <p class="bucket__ellipse">3</p>
-      </div>
+  </div>
+  <div class="nav__logo">
+    <a href="./index.html"><img class="logo_desktop" src="../../img/logo.png" alt="nav_logo"></a>
+  </div>
+  <div class="nav__list">
+    <ul class="nav__list-item">
+      <li><a class="nav__headphones" href="">headphones</a></li>
+      <li><a class="nav__earphones" href="./about.html">earphones</a></li>
+      <li><a class="nav__speakers" href="">speakers</a></li>
+      <li><a class="nav__explore" href="">explore</a></li>
+    </ul>
+  </div>
+  <div class="nav__icons">
+    <a href=""><img class="nav__icons_search" src="../../img/search.png" alt="search"></a>
+    <a href=""><img class="nav__icons_account" src="../../img/account.png" alt="account"></a>
+    <div class="nav__icons_bucket">
+      <a href=""><img src="../../img/bucket.png" alt="bucket"></a>
+      <p class="bucket__ellipse">3</p>
     </div>
   </div>
-</header>
+</div>
