--- a/src/partials/powerbeats/powerbeats.html
+++ b/src/partials/powerbeats/powerbeats.html
@@ -10,7 +10,7 @@
           <p>Totally wireless high-performance earphones</p>
         </div>
         <div class="powerbeats__title">
-          <h2>powerbeats pro</h2>
+          <p>powerbeats pro</p>
         </div>
         <div class="powerbeats__description">
           <p>Up to 9 hours of listening time</p>
@@ -20,7 +20,7 @@
         </div>
         <div class="powerbeats__price">
           <p>$199.95</p>
-          <button class="powerbeats__button">BUY NOW</button>
+          <button class="powerbeats__button">buy now</button>
         </div>
         <div class="powerbeats__music">
           <p>$60 Apple Music gift card with purchase of select Beats products.*</p>
