--- a/src/partials/products/product.html
+++ b/src/partials/products/product.html
@@ -1,148 +1,171 @@
-<section class="product">
-  <div class="product__list-item" id="carousel">
-    <div class="product__list" id="sale">
-      <div class="product__img">
-        <img class="product-image" src="../../img/product_1.png">
+<div class='product'>
+  <div class='product__part'>
+<!--    <div class="product__part_stick-sale stick-hidden">-->
+<!--      <img src="../../img/catalog/stick_sale.svg" alt="sale">-->
+<!--    </div>-->
+    <div class='product__part_image'>
+      <img src="../../img/product_1.png" alt="product">
+    </div>
+    <div class='product__part_element'>
+      <div class='product__part_title'>Beatsˣ</div>
+      <div class='product__part_description'>
+        Up to 8 hours of battery life</br>
+        With Fast Fuel, a 5-minute charge = </br>
+        2 hours of playback
       </div>
-      <div class="product__title">
-        <h2>Beatsˣ</h2>
-        <p class="product__description">
-          Up to 8 hours of battery life
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
-          2 hours of playback
-        </p>
-        <div class="product__buy">
-          <p class="product__price">$299.95</p>
-          <button class="product__button">BUY NOW</button>
-        </div>
+      <div class='product__part_buy'>
+        <div class='product__part_price'>$299.95</div>
+        <button class='product__part_button'>buy now</button>
       </div>
     </div>
-
-    <div class="product__list">
-      <div class="product__img" id="new">
-        <img class="product-image" src="../../img/product_2.png">
-      </div>
-      <div class="product__title">
-        <h2>Beatsˣ</h2>
-        <p class="product__description">
-          Up to 8 hours of battery life
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
-          2 hours of playback
-        </p>
-        <div class="product__buy">
-          <p class="product__price">$299.95</p>
-          <button class="product__button">BUY NOW</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="product__list">
-      <div class="product__img">
-        <img class="product-image" src="../../img/product_3.png">
-      </div>
-      <div class="product__title">
-        <h2>Beatsˣ</h2>
-        <p class="product__description">
-          Up to 8 hours of battery life
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
-          2 hours of playback
-        </p>
-        <div class="product__buy">
-          <p class="product__price">$299.95</p>
-          <button class="product__button">BUY NOW</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="product__list">
-      <div class="product__img">
-        <img class="product-image" src="../../img/product_4.png">
-      </div>
-      <div class="product__title">
-        <h2>Beatsˣ</h2>
-        <p class="product__description">
-          Up to 8 hours of battery life
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
-          2 hours of playback
-        </p>
-        <div class="product__buy">
-          <p class="product__price">$299.95</p>
-          <button class="product__button">BUY NOW</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="product__list">
-      <div class="product__img">
-        <img class="product-image" src="../../img/product_5.png">
-      </div>
-      <div class="product__title">
-        <h2>Beatsˣ</h2>
-        <p class="product__description">
-          Up to 8 hours of battery life
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
-          2 hours of playback
-        </p>
-        <div class="product__buy">
-          <p class="product__price">$299.95</p>
-          <button class="product__button">BUY NOW</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="product__list">
-      <div class="product__img">
-        <img class="product-image" src="../../img/product_6.png">
-      </div>
-      <div class="product__title">
-        <h2>Beatsˣ</h2>
-        <p class="product__description">
-          Up to 8 hours of battery life
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
-          2 hours of playback
-        </p>
-        <div class="product__buy">
-          <p class="product__price">$299.95</p>
-          <button class="product__button">BUY NOW</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="product__list product__hidden">
-      <div class="product__img">
-        <img class="product-image" src="../../img/product_7.png">
-      </div>
-      <div class="product__title">
-        <h2>Beatsˣ</h2>
-        <p class="product__description">
-          Up to 8 hours of battery life
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
-          2 hours of playback
-        </p>
-        <div class="product__buy">
-          <p class="product__price">$299.95</p>
-          <button class="product__button">BUY NOW</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="product__list product__hidden">
-      <div class="product__img">
-        <img class="product-image"   src="../../img/product_8.png">
-      </div>
-      <div class="product__title">
-        <h2>Beatsˣ</h2>
-        <p class="product__description">
-          Up to 8 hours of battery life
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
-          2 hours of playback
-        </p>
-        <div class="product__buy">
-          <p class="product__price">$299.95</p>
-          <button class="product__button">BUY NOW</button>
-        </div>
-      </div>
-    </div>
-    <div class="slider__beats_bottom"></div>
   </div>
-</section>
+
+  <div class='product__part'>
+<!--    <div class="product__part_stick-new stick-hidden">-->
+<!--      <img src="../../img/catalog/stick_new.svg" alt="sale">-->
+<!--    </div>-->
+    <div class='product__part_image'>
+      <img src="../../img/product_2.png" alt="product">
+    </div>
+    <div class='product__part_element'>
+      <div class='product__part_title'>Beatsˣ</div>
+      <div class='product__part_description'>
+        Up to 8 hours of battery life</br>
+        With Fast Fuel, a 5-minute charge = </br>
+        2 hours of playback
+      </div>
+      <div class='product__part_buy'>
+        <div class='product__part_price'>$299.95</div>
+        <button class='product__part_button'>buy now</button>
+      </div>
+    </div>
+  </div>
+
+  <div class='product__part'>
+<!--    <div class="product__part_stick-sale stick-hidden">-->
+<!--      <img src="../../img/catalog/stick_sale.svg" alt="sale">-->
+<!--    </div>-->
+    <div class='product__part_image'>
+      <img src="../../img/product_3.png" alt="product">
+    </div>
+    <div class='product__part_element'>
+      <div class='product__part_title'>Beatsˣ</div>
+      <div class='product__part_description'>
+        Up to 8 hours of battery life</br>
+        With Fast Fuel, a 5-minute charge = </br>
+        2 hours of playback
+      </div>
+      <div class='product__part_buy'>
+        <div class='product__part_price'>$299.95</div>
+        <button class='product__part_button'>buy now</button>
+      </div>
+    </div>
+  </div>
+
+  <div class='product__part'>
+    <div class='product__part_image'>
+      <img src="../../img/product_4.png" alt="product">
+    </div>
+    <div class='product__part_element'>
+      <div class='product__part_title'>Beatsˣ</div>
+      <div class='product__part_description'>
+        Up to 8 hours of battery life</br>
+        With Fast Fuel, a 5-minute charge = </br>
+        2 hours of playback
+      </div>
+      <div class='product__part_buy'>
+        <div class='product__part_price'>$299.95</div>
+        <button class='product__part_button'>buy now</button>
+      </div>
+    </div>
+  </div>
+
+  <div class='product__part'>
+<!--    <div class="product__part_stick-sale stick-hidden">-->
+<!--      <img src="../../img/catalog/stick_sale.svg" alt="sale">-->
+<!--    </div>-->
+<!--    <div class="product__part_stick-new stick-hidden">-->
+<!--      <img src="../../img/catalog/stick_new.svg" alt="sale">-->
+<!--    </div>-->
+    <div class='product__part_image'>
+      <img src="../../img/product_5.png" alt="product">
+    </div>
+    <div class='product__part_element'>
+      <div class='product__part_title'>Beatsˣ</div>
+      <div class='product__part_description'>
+        Up to 8 hours of battery life</br>
+        With Fast Fuel, a 5-minute charge = </br>
+        2 hours of playback
+      </div>
+      <div class='product__part_buy'>
+        <div class='product__part_price'>$299.95</div>
+        <button class='product__part_button'>buy now</button>
+      </div>
+    </div>
+  </div>
+
+  <div class='product__part'>
+    <div class='product__part_image'>
+      <img src="../../img/product_6.png" alt="product">
+    </div>
+    <div class='product__part_element'>
+      <div class='product__part_title'>Beatsˣ</div>
+      <div class='product__part_description'>
+        Up to 8 hours of battery life</br>
+        With Fast Fuel, a 5-minute charge = </br>
+        2 hours of playback
+      </div>
+      <div class='product__part_buy'>
+        <div class='product__part_price'>$299.95</div>
+        <button class='product__part_button'>buy now</button>
+      </div>
+    </div>
+  </div>
+
+  <div class='product__part product__hidden'>
+    <div class='product__part_image'>
+      <img src="../../img/product_7.png" alt="product">
+    </div>
+    <div class='product__part_element'>
+      <div class='product__part_title'>Beatsˣ</div>
+      <div class='product__part_description'>
+        Up to 8 hours of battery life</br>
+        With Fast Fuel, a 5-minute charge = </br>
+        2 hours of playback
+      </div>
+      <div class='product__part_buy'>
+        <div class='product__part_price'>$299.95</div>
+        <button class='product__part_button'>buy now</button>
+      </div>
+    </div>
+  </div>
+
+  <div class='product__part product__hidden'>
+    <div class='product__part_image'>
+      <img src="../../img/product_8.png" alt="product">
+    </div>
+    <div class='product__part_element'>
+      <div class='product__part_title'>Beatsˣ</div>
+      <div class='product__part_description'>
+        Up to 8 hours of battery life</br>
+        With Fast Fuel, a 5-minute charge = </br>
+        2 hours of playback
+      </div>
+      <div class='product__part_buy'>
+        <div class='product__part_price'>$299.95</div>
+        <button class='product__part_button'>buy now</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="pagination pagination_hidden">
+  <ul class="pagination__list">
+    <li class="prev-page"><a href="#"><</a></li>
+    <li class="number-page"><a href="#">1</a></li>
+    <li class="number-page"><a href="#">2</a></li>
+    <li class="number-page"><a href="#">3</a></li>
+    <li class="number-page"><a href="#">4</a></li>
+    <li class="next-page"><a href="#">></a></li>
+  </ul>
+</div>
