--- a/src/partials/signup/signup.html
+++ b/src/partials/signup/signup.html
@@ -1,6 +1,6 @@
 <div class="signup">
   <div class="signup__title">
-    <h1>Hear it first</h1>
+    <p>Hear it first</p>
   </div>
   <div class="signup__description">
     <p>Get updates on product drops, collaborations and all things Beats.</p>
@@ -9,6 +9,6 @@
     <input type="email" placeholder="Enter your Email">
   </div>
   <div>
-    <button class="signup__button">SIGN UP</button>
+    <button class="signup__button">sign up</button>
   </div>
 </div>
