--- a/src/partials/detail-page/detail_video.html
+++ b/src/partials/detail-page/detail_video.html
@@ -20,8 +20,10 @@
         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
     <div class="detail__video">
-      <img class="video-beats" src="../../img/video-img.svg" alt="video">
-      <img class="video-button" src="../../img/play-btn.svg" alt="play">
+      <img class="detail__video_screen" src="../../img/video-img.svg" alt="video">
+      <div class="detail__video_button">
+        <div class="detail__video_play"></div>
+      </div>
     </div>
   </div>
 </section>
