--- a/src/partials/signup/signup.scss
+++ b/src/partials/signup/signup.scss
@@ -7,13 +7,19 @@
   margin: 7.4% 6.5% 4.8%;
   padding-top: 52px;
   padding-bottom: 51px;
+  @include mobile{
+    padding-top: 0;
+  }
 }
 
 .signup__title {
   @include fonts_bold;
-  font-size: 25px;
+  font-size: 50px;
   line-height: 55px;
   color: $bg_main;
+  @include mobile{
+    font-size: 32px;
+  }
 }
 
 .signup__description {
@@ -21,6 +27,9 @@
   font-size: 14px;
   margin-top: 17px;
   margin-bottom: 47px;
+  @include mobile{
+    padding: 0 10px 0 10px;
+  }
 }
 
 
@@ -36,7 +45,7 @@
     padding: 0 22px;
 
     @include mobile {
-      width: 257px;
+      width: 298px;
       height: 41px;
       padding: 0 12px;
     }
@@ -45,6 +54,7 @@
 
 .signup__button {
   @include fonts_normal;
+  text-transform: uppercase;
   background: #00B0FF;
   border-radius: 100px;
   width: 507px;
@@ -55,11 +65,14 @@
   margin-bottom: 50px;
 
   @include mobile {
-    width: 257px;
+    color: black;
+    font-weight: bold;
+    width: 298px;
     height: 41px;
   }
 }
 
 .signup__button:hover {
-  background: $bg_btn_hover;
+  background: $grad_powerbeats;
+  transition: background 0.5s ease;
 }
